--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #0eaf7f;
-	font-family: "Raleway", sans-serif;
+	font-family: "Goudy Bookletter 1911", sans-serif;;
 }
 
 .container {
@@ -23,11 +23,11 @@ h1 {
 	background-color: #ce1bff;
 	color: #fff;
 	font-weight: 100;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
-	font-size: 18px;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+	font-size: 20px;
 	text-align: center;
-	padding: 10px;
+	padding: 15px;
 }
 
 .wrapper {
