--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
-	background-color: #0eaf7f;
-	font-family: "Goudy Bookletter 1911", sans-serif;;
+	background-color: #004f0c;
+	font-family: "Raleway", sans-serif;
 }
 
 .container {
 	width: 350px;
 	height: 500px;
-	background-color: rgb(238, 234, 234);
+	background-color: #fff;
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -17,28 +17,28 @@ body {
 h1 {
 	position: absolute;
 	left: 50%;
-	top: -55px;
+	top: -60px;
 	width: 300px;
 	transform: translateX(-50%);
-	background-color: #ce1bff;
+	background-color: #9600d6;
 	color: #fff;
 	font-weight: 100;
-	border-top-left-radius: 25px;
-	border-top-right-radius: 25px;
-	font-size: 20px;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	font-size: 18px;
 	text-align: center;
-	padding: 15px;
+	padding: 10px;
 }
 
 .wrapper {
-	padding: 15px;
+	padding: 20px;
 }
 
 input,
 select {
-	width: 78%;
+	width: 80%;
 	border: none;
-	border-bottom: 1px solid #5e06f5;
+	border-bottom: 1px solid #00b7ff;
 	padding: 10px;
 }
 
@@ -49,14 +49,14 @@ select:focus {
 }
 
 select {
-	width: 90% !important;
+	width: 88% !important;
 }
 
 button {
 	margin: 20px auto;
 	width: 150px;
 	height: 50px;
-	background-color: #33d45b;
+	background-color: #3b14ff;
 	color: #fff;
 	font-size: 16px;
 	border: none;
@@ -65,6 +65,6 @@ button {
 
 .tip {
 	text-align: center;
-	font-size: 20px;
+	font-size: 18px;
 	display: none;
 }
